--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ ADMIN_JWT_SECRET=tobemodified
 TRANSFER_TOKEN_SALT=tobemodified
 JWT_SECRET=tobemodified
 ENCRYPTION_KEY=tobemodified
+
+# Production / Heroku: обовʼязково для коректного завантаження адмінки
+# PUBLIC_URL=https://your-app.herokuapp.com
+# STRAPI_ADMIN_BACKEND_URL=https://your-app.herokuapp.com
